--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "datagate",
   "version": "0.0.1",
-  "description": "datagate ========",
+  "description": "valid input data for node and browser,验证输入数据适用于Node和浏览器",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/skipify/datagate"
+  },
   "keywords": [
-    "valid"
+    "valid input",
+    "验证输入数据"
   ],
   "author": "skipify@qq.com",
   "license": "MIT"
